--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -22,9 +22,9 @@ update-kit-by-dsl.deletion.unsupported={0} deletion is not supported. These {1} 
 update-kit-by-dsl.answer-option.notFound=answer option not found
 
 grant-user-access-to-kit.kitId.notNull='kitId' may not be null
-grant-user-access-to-kit.email.notNull='email' may not be null
+grant-user-access-to-kit.userId.notNull='userId' may not be null
 grant-user-access-to-kit.kitId.notFound=AssessmentKit with the given id does not exist
-grant-user-access-to-kit.email.notFound=User account with the given email does not exist
+grant-user-access-to-kit.userId.notFound=User account with the given id does not exist
 
 get-kit-user-list.kit-id.notNull='kitId' may not be null
 get-kit-user-list.page.min='page' must be greater than or equal to 0
