--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -69,7 +69,7 @@ get-questionnaires-progress.assessmentResult.notFound=no assessmentResult found 
 
 report-subject.assessment.id.notNull='assessmentId' may not be empty
 report-subject.subject.id.notNull='subjectId' may not be empty
-report-subject.assessmentResult.notFound=no assessmentResult found by this 'subjectId'
+report-subject.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentResultId' and 'subjectId'
 report-subject.assessmentResult.notValid=assessmentResult is not valid. Recalculation is needed
 report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
