--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -43,7 +43,9 @@ get-user-by-email.email.notNull='email' may not be null
 get-user-by-email.email.notFound=User account with the given email does not exist
 
 create-kit-by-dsl.kit-dsl-json-id.notNull='kitJsonDslId' may not be null
+create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
+create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 create-kit-by-dsl.title.notNull='title' may not be null
 create-kit-by-dsl.summary.notNull='summary' may not be null
 create-kit-by-dsl.about.notNull='about' may not be null
-create-kit-by-dsl.tags.notNull='tags' may not be null
+create-kit-by-dsl.tag-ids.notNull='tagIds' may not be null
