--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -49,3 +49,4 @@ get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
 
 upload-kit.dsl-file.notNull='dslFile' may not be null
+upload-kit.expert-group-id.notNull='expertGroupId' may not be null
