--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -47,3 +47,4 @@ get-user-by-email.email.notFound=User account with the given email does not exis
 get-expert-group-list.page.min='page' must be greater than or equal to 0
 get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
+get-expert-group-by-id.expert-group.notFound=Expert Group with the given id does not exist
