--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -48,10 +48,8 @@ get-expert-group-list.page.min='page' must be greater than or equal to 0
 get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
 
-upload-kit.dsl-file.notNull='dslFile' may not be null
-
 upload-kit.expert-group-id.notNull='expertGroupId' may not be null
-create-kit-by-dsl.kit-dsl-json-id.notNull='kitJsonDslId' may not be null
+create-kit-by-dsl.kit-dsl-id.notNull='kitDslId' may not be null
 create-kit-by-dsl.kit-dsl.notFound=AssessmentKitDsl with the given id does not exist
 create-kit-by-dsl.kit-dsl-file.notFound=No file found by the given information
 create-kit-by-dsl.isPrivate.notNull='isPrivate' may not be null
