--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -51,9 +51,9 @@ get-expert-group-list.size.max='size' must be less than or equal to 100
 upload-kit.dsl-file.notNull='dslFile' may not be null
 upload-kit.expert-group-id.notNull='expertGroupId' may not be null
 
-create-expert-group.name.notBlank='name' may not be empty
-create-expert-group.name.size.max='name' must be less than maximum size
-create-expert-group.name.size.min='name' must be more than minimum size
+create-expert-group.title.notBlank='title' may not be empty
+create-expert-group.title.size.max='title' must be less than maximum size
+create-expert-group.title.size.min='title' must be more than minimum size
 create-expert-group.bio.notBlank='bio' may not be empty
 create-expert-group.bio.size.max='bio' must be less than maximum size
 create-expert-group.picture.notBlank='picture' may not be empty
