--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -52,13 +52,17 @@ upload-kit.dsl-file.notNull='dslFile' may not be null
 upload-kit.expert-group-id.notNull='expertGroupId' may not be null
 
 create-expert-group.title.notBlank='title' may not be empty
-create-expert-group.title.size.max='title' must be less than maximum size
 create-expert-group.title.size.min='title' must be more than minimum size
+create-expert-group.title.size.max='title' must be less than maximum size
 create-expert-group.bio.notBlank='bio' may not be empty
+create-expert-group.bio.size.min='bio' must be more than minimum size
 create-expert-group.bio.size.max='bio' must be less than maximum size
 create-expert-group.picture.notBlank='picture' may not be empty
+create-expert-group.picture.size.min='picture' must be more than minimum size
 create-expert-group.picture.size.max='picture' must be less than maximum size
 create-expert-group.about.notBlank='about' may not be empty
+create-expert-group.about.size.min='about' must be more than minimum size
 create-expert-group.about.size.max='about' must be less than maximum size
 create-expert-group.website.notBlank='website' may not be empty
+create-expert-group.website.size.min='website' must be more than minimum size
 create-expert-group.website.size.max='website' must be less than maximum size
