--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -160,4 +160,4 @@ get-assessment-users.page.min='page' must be greater than or equal to 0
 
 add-evidence-attachment.evidenceId.notNull='evidenceId' may not be null
 add-evidence-attachment.attachment.notNull='attachment' may not be null
-add-evidence-attachment.attachmentsCount.max=attachments count must be less than or equal to 5
+add-evidence-attachment.attachmentsCount.max=attachments count exceeds the max count.
