--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -161,3 +161,5 @@ get-assessment-users.page.min='page' must be greater than or equal to 0
 add-evidence-attachment.evidenceId.notNull='evidenceId' may not be null
 add-evidence-attachment.attachment.notNull='attachment' may not be null
 add-evidence-attachment.attachmentsCount.max=attachments count exceeds the max count.
+add-evidence-attachment.description.size.min='description' length must be more than or equal to 3
+add-evidence-attachment.description.size.max='description' length must be less than 100
