--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -142,6 +142,7 @@ update-assessment-user-role.roleId.notNull='roleId' may not be null
 update-assessment-user-role.userId.notMember=User must be a member of the assessment space
 update-assessment-user-role.assessmentId.userId.notFound=User has no role in this assessment to be updated
 update-assessment-user-role.roleId.notFound=no role found by this 'roleId'
+update-assessment-user-role.userId.isSpaceOwner=Space owner role is not editable
 
 delete-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
 delete-assessment-user-role.userId.notNull='userId' may not be null
